--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: rest-client-app
 
   datasource:
-    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:mem:db
     username: sa
     password:
   h2:
@@ -12,10 +12,10 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       hibernate:
         generate_statistics: true
     show-sql: true
 server:
-  port: 8083
+  port: 8084
 
